    - Renamed Bob's Assembling machines mod setting Multi purpose furnaces to Recipe furnaces
    - Reduced cost of basic Steel plate smelting from 8 Glowing hot iron plate to 6 Glowing hot iron plate on normal difficulty
    - Increased starting landfill from 1k to 2k
    - Updated crystallization recipe icons
  Bugfixes:
    - Fixed crash when Train Construction Site is enabled
    - Fixed Forage for cellulose fiber recipe not usable with mods that replace the default character
    - Fixed Cobalt Processing not researchable with some combinations of mods
  Info:
    - A Sea Block Config mod has been merged in and should be removed
    - KS Power mod has been updated for 1.1 so can be installed instead of the patched version ⚡KS Power_quickfix
---------------------------------------------------------------------------------------------------
Version: 0.5.2
Date: 11.01.2021
  Changes:
    - Cleared fuel value from disabled fluids
    - Standardise research time for startup techs
    - Removed Bob's Chemical furnaces. Recipes moved to Angel's Chemical furnaces
    - Metal mixing furnace recipes moved to Sintering oven or Blast furnace
    - Stone metal mixing furnaces are available at the start of the game
    - Bob's assembling machines mod setting Fluid burning furnaces defaults to false
    - Renamed Brass and Bronze processing techs
    - Tidied up tech prerequisites
    - Raw gem recipes unlocked by Geode crystallization 1
    - Alien artifact recipes unlocked by Alien bio processing 3
    - Reshuffled early game smelting technologies and recipe unlocks
    - Disabled recipes Silicon > Glass and Silver ore > Silver plate
    - Removed recipe Carbon > Carbon Dioxide
    - Moved garden duplication recipes to Alien farming
    - Added bio science to relevant techs
    - Moved Small storage tanks to Fluid control
    - Removed empty technologies
    - Moved Manganese techs down a tier
    - Moved Silicon techs up a tier
    - Moved Nickel techs up a tier