@@ -22,6 +22,7 @@ Date: ???
     - Reduced cost of basic Steel plate smelting from 8 Glowing hot iron plate to 6 Glowing hot iron plate on normal difficulty
     - Increased starting landfill from 1k to 2k
     - Updated crystallization recipe icons
+    - Unsubscribe from relevant event handlers after home rock has been placed / all tutorial techs have been unlocked
   Bugfixes:
     - Fixed crash when Train Construction Site is enabled
     - Fixed Forage for cellulose fiber recipe not usable with mods that replace the default character
